hexagonal architecture in progress